[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/spline_interp.gd" type="Script" id=1]

[node name="spline_interp" type="Node2D"]
script = ExtResource( 1 )

[node name="button_done" type="Button" parent="."]
margin_left = 450.0
margin_top = 433.0
margin_right = 500.0
margin_bottom = 453.0
text = "DONE"

[node name="button_cancel" type="Button" parent="."]
margin_left = 500.0
margin_top = 433.0
margin_right = 561.0
margin_bottom = 453.0
text = "CANCEL"

[connection signal="pressed" from="button_done" to="." method="_on_button_done_pressed"]
[connection signal="pressed" from="button_cancel" to="." method="_on_button_cancel_pressed"]
